# miniRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clean.sh  compile_commands.json  main.c  miniRT  my_mlx_pixel_put.c  test.sh
.github/workflows/: build.yml  ctest.yml  norm.yml  test.yml
cunit/: Makefile  fizzbuzz.c  fizzbuzz.h  main  main.c  test.c
include/: miniRT.h  scene.h  vector.h
includes/: header.h
libft/: CMakeLists.txt  Makefile  ft_dprintf.c  ft_printf.c  ft_strcmp.c  ft_strldup.c  libft.h
libft/includes/: libft.h
libft/srcs/ft_dprintf/: ft_dprintf.c  ft_dputaddress.c  ft_dputchar.c  ft_dputnbr.c  ft_dputstr.c
libft/srcs/ft_is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c
libft/srcs/ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/srcs/ft_mem/: ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
libft/srcs/ft_printf/: ft_printf.c  ft_putaddress.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c
libft/srcs/ft_put/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/srcs/ft_stdlib/: ft_abs.c  ft_bzero.c  ft_calloc.c  ft_split.c
libft/srcs/ft_str/: ft_strall.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strldup.c  ft_strlen.c  ft_strltrim.c  ft_strmapi.c  ft_strncmp.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libft/srcs/ft_to/: ft_atoi.c  ft_atol.c  ft_itoa.c  ft_tolower.c  ft_toupper.c
libmlx/.github/workflows/: ci.yml
scenes/: bug.rt  sample.rt  sample_left.rt  sample_up.rt
src/: caluculate_color.c  dot.c  mag.c  main.c  normalize.c  vec_minus.c
src/draw/: sphere.c
src/drawing/: Makefile  main.c
src/drawing/draw/: caluc_cylinder.c  cylinder.c  cylinder_utils.c  draw_image.c  get_inter.c  plane.c  sphere.c
src/drawing/error/: err_init_mlx.c
src/drawing/include/: header.h
src/drawing/init/: init_cylinder.c  init_mlx.c  init_plane.c  init_scene.c  init_sphere.c
src/drawing/phong_shading/: ambient.c  caluc_color.c  cy_diffuse.c  diffuse.c  phong_shading.c  specular.c
src/drawing/shadow/: is_blocked_light.c  is_shadow.c  shadow_cylinder.c  shadow_plane.c  shadow_sphere.c
src/drawing/utils/: caluc_ray.c  caluc_screen_point.c  convert_color_to_hex.c  my_mlx_pixel_put.c
src/error/: err_init_mlx.c
src/init/: init_scene.c
src/list/: creat_list.c  creat_node.c  list.h  push_back_list.c
src/phong_shading/: ambient.c  diffuse.c  phong_shading.c  specular.c
src/scene/: args_to_vec.c  constructor.c  destructor.c  double_to.c  getter_rgb.c  in_range.c  parse.c  parse_double.c  parse_line_each_object.c  parse_line_env.c  parse_line_object.c  parse_uint.c  parse_vec.c  scene.h  test.c  vector.c
src/scene/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
src/scene/utils/: array_size.c  exit_with_error.c  free_array.c  split_space.c
src/share/: Makefile
src/share/include/: list.h  vector.h
src/share/list/: clear_list.c  creat_list.c  destroy_list.c
src/share/vector/: dot.c  mag.c  normalize.c  vec_cross.c  vec_div.c  vec_dot.c  vec_dup.c  vec_eq.c  vec_is_normalized.c  vec_mag.c  vec_minus.c  vec_mult.c  vec_normalize.c  vec_plus.c  vec_rev.c
src/utils/: caluc_ray.c  caluc_screen_point.c  convert_color_to_hex.c
src/vector/: dot.c  vec_dot.c  vec_eq.c  vec_is_normalized.c  vec_mult.c  vec_normalize.c
tests/: CMakeLists.txt  test_parser.cpp
